chore: Replace deprecated methods from RandomStringUtils